--- a/Emu/CPS1/config.json
+++ b/Emu/CPS1/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/cps1.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps1.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/cps1.png",
-  "background":"../_theme/bg-cps1.png",
+  "background": "",
   "themecolor":"0000FF",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
