--- a/Emu/GBC/config.json
+++ b/Emu/GBC/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/gbc.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gbc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gbc.png",
-  "background":"../_theme/bg-gbc.png",
+  "background": "",
   "themecolor":"FFB800",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
