--- a/Emu/OPENBOR/config.json
+++ b/Emu/OPENBOR/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/openbor.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/openbor.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/openbor.png",
-  "background":"../_theme/bg-openbor.png",
+  "background": "",
   "themecolor":"FFFF00",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
