--- a/Emu/PCE/config.json
+++ b/Emu/PCE/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/pce.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/pce.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/pce.png",
-  "background":"../_theme/bg-pce.png",
+  "background": "",
   "themecolor":"EA483F",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
