--- a/Emu/ATARI/config.json
+++ b/Emu/ATARI/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/atari.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/atari.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/atari.png",
-  "background":"../_theme/bg-atari2600.png",
+  "background": "",
   "themecolor":"AF7AC5",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
