--- a/Emu/CPS2/config.json
+++ b/Emu/CPS2/config.json
@@ -3,7 +3,7 @@
   "icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/cps2.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps2.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/cps2.png",
-  "background":"../_theme/bg-cps2.png",
+  "background": "",
   "themecolor":"FFFF00",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
