--- a/Emu/FC/config.json
+++ b/Emu/FC/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/fc.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/fc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/fc.png",
-  "background":"../_theme/bg-fc.png",
+  "background": "",
   "effectsh":"effect.sh",
   "themecolor":"991615",
   "launch": "../.emu_setup/standard_launch.sh",
