--- a/Emu/GG/config.json
+++ b/Emu/GG/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/gg.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gg.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gg.png",
-  "background":"../_theme/bg-gg.png",
+  "background": "",
   "themecolor":"FFFFFF",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
