--- a/Emu/GW/config.json
+++ b/Emu/GW/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/gw.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gw.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gw.png",
-  "background":"../_theme/bg-gw.png",
+  "background": "",
   "themecolor":"FF0000",
   "effectsh":"",
   "launch": "../.emu_setup/standard_launch.sh",
