--- a/Emu/LYNX/config.json
+++ b/Emu/LYNX/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/lynx.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/lynx.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/lynx.png",
-  "background":"../_theme/bg-lynx.png",
+  "background": "",
   "themecolor":"88FF88",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
