--- a/Emu/MS/config.json
+++ b/Emu/MS/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/ms.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ms.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ms.png",
-  "background":"../_theme/bg-ms.png",
+  "background": "",
   "themecolor":"740009",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
