--- a/Emu/NEOGEO/config.json
+++ b/Emu/NEOGEO/config.json
@@ -3,7 +3,7 @@
 	"icontop": "/mnt/SDCARD/Themes/SPRUCE/icontop/neogeo.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/neogeo.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/neogeo.png",
- 	"background": "../_theme/bg-neogeo.png",
+ 	"background": "",
 	"themecolor": "FFD200",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
