--- a/Emu/PS/config.json
+++ b/Emu/PS/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/ps.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ps.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ps.png",
-  "background":"../_theme/bg-ps.png",
+  "background": "",
   "themecolor":"00FF00",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
