--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/sfc.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/sfc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/sfc.png",
-  "background":"../_theme/bg-sfc.png",
+  "background": "",
   "themecolor":"FF0000",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
