--- a/Emu/WSC/config.json
+++ b/Emu/WSC/config.json
@@ -3,7 +3,7 @@
   "icontop":"/mnt/SDCARD/Themes/SPRUCE/icontop/wsc.png",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/wsc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/wsc.png",
-  "background":"../_theme/bg-wsc.png",
+  "background": "",
   "themecolor":"3C4593",
   "effectsh":"effect.sh",
   "launch": "../.emu_setup/standard_launch.sh",
