align Flip RA configs more with A30 RA config

--- a/RetroArch/retroarch-flip.cfg
+++ b/RetroArch/retroarch-flip.cfg
@@ -1,6 +1,6 @@
 accessibility_enable = "false"
 accessibility_narrator_speech_speed = "5"
-ai_service_enable = "false"
+ai_service_enable = "true"
 ai_service_mode = "1"
 ai_service_pause = "false"
 ai_service_poll_delay = "0"
@@ -29,7 +29,7 @@ audio_enable_menu_scroll = "false"
 audio_fastforward_mute = "false"
 audio_fastforward_speedup = "false"
 audio_filter_dir = "./.retroarch/filters/audio"
-audio_latency = "128"
+audio_latency = "64"
 audio_max_timing_skew = "0.050000"
 audio_mute_enable = "false"
 audio_out_rate = "48000"
@@ -46,7 +46,7 @@ auto_shaders_enable = "true"
 autosave_interval = "0"
 block_sram_overwrite = "false"
 bluetooth_driver = "null"
-builtin_imageviewer_enable = "true"
+builtin_imageviewer_enable = "false"
 builtin_mediaplayer_enable = "false"
 bundle_assets_dst_path = ""
 bundle_assets_dst_path_subdir = ""
@@ -94,34 +94,34 @@ cloud_sync_enable = "false"
 config_save_on_exit = "true"
 content_database_path = "./.retroarch/database/rdb"
 content_favorites_directory = "default"
-content_favorites_path = ""
+content_favorites_path = ":/content_favorites.lpl"
 content_favorites_size = "200"
 content_history_directory = "default"
-content_history_path = ""
+content_history_path = ":/content_history.lpl"
 content_history_size = "200"
 content_image_history_directory = "default"
-content_image_history_path = ""
+content_image_history_path = ":/content_image_history.lpl"
 content_music_history_directory = "default"
-content_music_history_path = ""
-content_runtime_log = "true"
+content_music_history_path = ":/content_music_history.lpl"
+content_runtime_log = "false"
 content_runtime_log_aggregate = "false"
-content_show_add = "true"
+content_show_add = "false"
 content_show_add_entry = "2"
 content_show_contentless_cores = "2"
-content_show_explore = "true"
-content_show_favorites = "true"
+content_show_explore = "false"
+content_show_favorites = "false"
 content_show_history = "true"
 content_show_images = "true"
-content_show_music = "false"
+content_show_music = "true"
 content_show_netplay = "true"
-content_show_playlists = "true"
+content_show_playlists = "false"
 content_show_settings = "true"
 content_show_settings_password = ""
 content_video_directory = "default"
-content_video_history_path = ""
+content_video_history_path = ":/content_video_history.lpl"
 core_assets_directory = "./.retroarch/downloads"
 core_info_cache_enable = "true"
-core_info_savestate_bypass = "false"
+core_info_savestate_bypass = "true"
 core_option_category_enable = "true"
 core_options_path = ""
 core_set_supports_no_game_enable = "true"
@@ -129,7 +129,7 @@ core_updater_auto_backup = "false"
 core_updater_auto_backup_history_size = "1"
 core_updater_auto_extract_archive = "true"
 core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
-core_updater_buildbot_cores_url = ""
+core_updater_buildbot_cores_url = "OFF"
 core_updater_show_experimental_cores = "false"
 crt_switch_center_adjust = "0"
 crt_switch_hires_menu = "false"
@@ -141,8 +141,8 @@ crt_switch_timings = ""
 crt_video_refresh_rate = "60.000000"
 current_resolution_id = "0"
 custom_viewport_height = "480"
-custom_viewport_width = "360"
-custom_viewport_x = "140"
+custom_viewport_width = "640"
+custom_viewport_x = "0"
 custom_viewport_y = "0"
 desktop_menu_enable = "true"
 discord_allow = "false"
@@ -164,7 +164,7 @@ frame_time_counter_reset_after_save_state = "false"
 framecount_show = "false"
 frontend_log_level = "1"
 game_specific_options = "true"
-gamemode_enable = "true"
+gamemode_enable = "false"
 gamma_correction = "0"
 global_core_options = "false"
 history_list_enable = "true"
@@ -2827,8 +2827,8 @@ keyboard_gamepad_mapping_type = "1"
 kiosk_mode_enable = "false"
 kiosk_mode_password = ""
 led_driver = "null"
-libretro_directory = "./.retroarch/cores"
-libretro_info_path = "./.retroarch/cores"
+libretro_directory = "./.retroarch/cores-a133"
+libretro_info_path = "./.retroarch/info"
 libretro_log_level = "1"
 load_dummy_on_core_shutdown = "true"
 location_allow = "false"
@@ -2865,7 +2865,7 @@ menu_rgui_full_width_layout = "true"
 menu_rgui_shadows = "false"
 menu_rgui_transparency = "true"
 menu_savestate_resume = "true"
-menu_scale_factor = "1.000000"
+menu_scale_factor = "2.000000"
 menu_screensaver_animation = "0"
 menu_screensaver_animation_speed = "1.000000"
 menu_screensaver_timeout = "0"
@@ -2874,12 +2874,12 @@ menu_scroll_fast = "false"
 menu_shader_pipeline = "2"
 menu_show_advanced_settings = "true"
 menu_show_configurations = "true"
-menu_show_core_updater = "true"
+menu_show_core_updater = "false"
 menu_show_help = "true"
 menu_show_information = "true"
 menu_show_latency = "true"
 menu_show_load_content = "true"
-menu_show_load_content_animation = "true"
+menu_show_load_content_animation = "false"
 menu_show_load_core = "true"
 menu_show_online_updater = "true"
 menu_show_overlays = "true"
@@ -2899,11 +2899,11 @@ menu_ticker_speed = "2.000000"
 menu_ticker_type = "1"
 menu_timedate_date_separator = "0"
 menu_timedate_enable = "true"
-menu_timedate_style = "11"
+menu_timedate_style = "2"
 menu_unified_controls = "false"
 menu_use_preferred_system_color_theme = "false"
 menu_wallpaper = ""
-menu_wallpaper_opacity = "0.900000"
+menu_wallpaper_opacity = "0.300000"
 menu_widget_scale_auto = "true"
 menu_widget_scale_factor = "1.000000"
 menu_widget_scale_factor_windowed = "1.000000"
@@ -2923,11 +2923,11 @@ netplay_allow_pausing = "false"
 netplay_allow_slaves = "true"
 netplay_chat_color_msg = "16777215"
 netplay_chat_color_name = "32768"
-netplay_check_frames = "600"
+netplay_check_frames = "3600"
 netplay_custom_mitm_server = ""
 netplay_fade_chat = "true"
-netplay_input_latency_frames_min = "0"
-netplay_input_latency_frames_range = "0"
+netplay_input_latency_frames_min = "1"
+netplay_input_latency_frames_range = "2"
 netplay_ip_address = ""
 netplay_ip_port = "55435"
 netplay_max_connections = "3"
@@ -2955,8 +2955,8 @@ netplay_request_device_p7 = "false"
 netplay_request_device_p8 = "false"
 netplay_request_device_p9 = "false"
 netplay_require_slaves = "false"
-netplay_share_analog = "0"
-netplay_share_digital = "0"
+netplay_share_analog = "1"
+netplay_share_digital = "1"
 netplay_show_only_connectable = "true"
 netplay_show_only_installed_cores = "false"
 netplay_show_passworded = "true"
@@ -2966,27 +2966,27 @@ netplay_use_mitm_server = "false"
 network_cmd_enable = "false"
 network_cmd_port = "55355"
 network_on_demand_thumbnails = "false"
-notification_show_autoconfig = "true"
-notification_show_cheats_applied = "true"
-notification_show_config_override_load = "true"
+notification_show_autoconfig = "false"
+notification_show_cheats_applied = "false"
+notification_show_config_override_load = "false"
 notification_show_disk_control = "true"
 notification_show_fast_forward = "true"
 notification_show_netplay_extra = "false"
-notification_show_patch_applied = "true"
-notification_show_refresh_rate = "true"
-notification_show_remap_load = "true"
+notification_show_patch_applied = "false"
+notification_show_refresh_rate = "false"
+notification_show_remap_load = "false"
 notification_show_save_state = "true"
 notification_show_screenshot = "true"
 notification_show_screenshot_duration = "0"
 notification_show_screenshot_flash = "0"
 notification_show_set_initial_disk = "true"
 notification_show_when_menu_is_alive = "false"
-osk_overlay_directory = "./.retroarch/overlays/keyboards"
-overlay_directory = "./.retroarch/overlays"
+osk_overlay_directory = "./.retroarch/overlay/keyboards"
+overlay_directory = "./.retroarch/overlay"
 ozone_collapse_sidebar = "false"
-ozone_menu_color_theme = "1"
+ozone_menu_color_theme = "3"
 ozone_scroll_content_metadata = "false"
-ozone_sort_after_truncate_playlist_name = "false"
+ozone_sort_after_truncate_playlist_name = "true"
 ozone_thumbnail_scale_factor = "1.000000"
 ozone_truncate_playlist_name = "true"
 pause_nonactive = "true"
@@ -2999,41 +2999,41 @@ playlist_entry_rename = "true"
 playlist_fuzzy_archive_match = "false"
 playlist_portable_paths = "false"
 playlist_show_entry_idx = "true"
-playlist_show_history_icons = "1"
+playlist_show_history_icons = "0"
 playlist_show_inline_core_name = "0"
 playlist_show_sublabels = "true"
 playlist_sort_alphabetical = "true"
-playlist_sublabel_last_played_style = "1"
+playlist_sublabel_last_played_style = "0"
 playlist_sublabel_runtime_type = "0"
 playlist_use_filename = "false"
 playlist_use_old_format = "false"
 preemptive_frames_enable = "false"
 preemptive_frames_hide_warnings = "false"
-quick_menu_show_add_to_favorites = "true"
+quick_menu_show_add_to_favorites = "false"
 quick_menu_show_cheats = "true"
 quick_menu_show_close_content = "true"
 quick_menu_show_controls = "true"
-quick_menu_show_core_options_flush = "false"
-quick_menu_show_download_thumbnails = "true"
+quick_menu_show_core_options_flush = "true"
+quick_menu_show_download_thumbnails = "false"
 quick_menu_show_information = "true"
 quick_menu_show_options = "true"
 quick_menu_show_replay = "false"
-quick_menu_show_reset_core_association = "true"
+quick_menu_show_reset_core_association = "false"
 quick_menu_show_restart_content = "true"
 quick_menu_show_resume_content = "true"
 quick_menu_show_save_content_dir_overrides = "true"
 quick_menu_show_save_core_overrides = "true"
 quick_menu_show_save_game_overrides = "true"
 quick_menu_show_save_load_state = "true"
-quick_menu_show_savestate_submenu = "true"
-quick_menu_show_set_core_association = "true"
+quick_menu_show_savestate_submenu = "false"
+quick_menu_show_set_core_association = "false"
 quick_menu_show_shaders = "true"
-quick_menu_show_start_recording = "true"
-quick_menu_show_start_streaming = "true"
+quick_menu_show_start_recording = "false"
+quick_menu_show_start_streaming = "false"
 quick_menu_show_take_screenshot = "true"
 quick_menu_show_undo_save_load_state = "true"
 quit_on_close_content = "0"
-quit_press_twice = "true"
+quit_press_twice = "false"
 record_driver = "null"
 recording_config_directory = "./.retroarch/records_config"
 recording_output_directory = "./.retroarch/records"
@@ -3055,7 +3055,7 @@ rgui_browser_directory = "default"
 rgui_config_directory = "./.retroarch/config"
 rgui_extended_ascii = "false"
 rgui_inline_thumbnails = "false"
-rgui_internal_upscale_level = "0"
+rgui_internal_upscale_level = "2"
 rgui_menu_color_theme = "4"
 rgui_menu_theme_preset = ""
 rgui_particle_effect = "0"
@@ -3072,13 +3072,13 @@ run_ahead_hide_warnings = "false"
 run_ahead_secondary_instance = "true"
 runtime_log_directory = "default"
 save_file_compression = "false"
-savefile_directory = "./.retroarch/saves"
+savefile_directory = "/mnt/SDCARD/Saves/saves"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
-savestate_auto_load = "false"
-savestate_auto_save = "false"
-savestate_directory = "./.retroarch/states"
-savestate_file_compression = "true"
+savestate_auto_load = "true"
+savestate_auto_save = "true"
+savestate_directory = "/mnt/SDCARD/Saves/states"
+savestate_file_compression = "false"
 savestate_max_keep = "0"
 savestate_thumbnail_enable = "false"
 savestates_in_content_dir = "false"
@@ -3088,7 +3088,7 @@ screen_brightness = "100"
 screen_orientation = "0"
 screenshot_directory = "./.retroarch/screenshots"
 screenshots_in_content_dir = "false"
-settings_show_accessibility = "true"
+settings_show_accessibility = "false"
 settings_show_achievements = "true"
 settings_show_ai_service = "true"
 settings_show_audio = "true"
@@ -3103,9 +3103,9 @@ settings_show_latency = "true"
 settings_show_logging = "true"
 settings_show_network = "true"
 settings_show_onscreen_display = "true"
-settings_show_playlists = "true"
-settings_show_power_management = "true"
-settings_show_recording = "true"
+settings_show_playlists = "false"
+settings_show_power_management = "false"
+settings_show_recording = "false"
 settings_show_saving = "true"
 settings_show_user = "true"
 settings_show_user_interface = "true"
@@ -3125,7 +3125,7 @@ stdin_cmd_enable = "false"
 streaming_mode = "0"
 suspend_screensaver_enable = "true"
 sustained_performance_mode = "false"
-system_directory = "./.retroarch/system"
+system_directory = "/mnt/SDCARD/BIOS"
 systemfiles_in_content_dir = "false"
 threaded_data_runloop_enable = "true"
 thumbnails_directory = "./.retroarch/thumbnails"
@@ -3153,14 +3153,14 @@ video_driver = "gl"
 video_filter = ""
 video_filter_dir = "./.retroarch/filters/video"
 video_font_enable = "true"
-video_font_path = ""
+video_font_path = "./.retroarch/system/msyh.ttf"
 video_font_size = "32.000000"
 video_force_aspect = "true"
 video_force_srgb_disable = "false"
 video_frame_delay = "0"
 video_frame_delay_auto = "false"
 video_frame_rest = "false"
-video_fullscreen = "true"
+video_fullscreen = "false"
 video_fullscreen_x = "0"
 video_fullscreen_y = "0"
 video_gpu_record = "false"
@@ -3197,7 +3197,7 @@ video_scale_integer_overscale = "false"
 video_scan_subframes = "false"
 video_shader_delay = "0"
 video_shader_dir = "./.retroarch/shaders"
-video_shader_enable = "false"
+video_shader_enable = "true"
 video_shader_preset_save_reference_enable = "false"
 video_shader_remember_last_dir = "false"
 video_shader_subframes = "1"
@@ -3209,7 +3209,7 @@ video_stream_port = "56400"
 video_stream_quality = "11"
 video_stream_scale_factor = "1"
 video_stream_url = ""
-video_swap_interval = "1"
+video_swap_interval = "0"
 video_threaded = "true"
 video_vsync = "true"
 video_waitable_swapchains = "true"
@@ -3230,11 +3230,11 @@ webdav_url = ""
 webdav_username = ""
 wifi_driver = "null"
 wifi_enabled = "true"
-xmb_alpha_factor = "90"
+xmb_alpha_factor = "75"
 xmb_font = ""
-xmb_layout = "2"
+xmb_layout = "0"
 xmb_menu_color_theme = "4"
-xmb_shadows_enable = "true"
+xmb_shadows_enable = "false"
 xmb_switch_icons = "true"
 xmb_theme = "0"
 xmb_vertical_thumbnails = "false"
