--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -313,7 +313,7 @@ input_osk_toggle = "nul"
 input_osk_toggle_axis = "nul"
 input_osk_toggle_btn = "nul"
 input_osk_toggle_mbtn = "nul"
-input_overlay = "./.retroarch/overlay/FC/horizontal-phosphors.cfg"
+input_overlay = ""
 input_overlay_abxy_diagonal_sensitivity = "50"
 input_overlay_aspect_adjust_landscape = "0.000000"
 input_overlay_aspect_adjust_portrait = "0.000000"
@@ -3025,7 +3025,7 @@ quick_menu_show_set_core_association = "false"
 quick_menu_show_shaders = "true"
 quick_menu_show_start_recording = "false"
 quick_menu_show_start_streaming = "false"
-quick_menu_show_streaming = "true"
+quick_menu_show_streaming = "false"
 quick_menu_show_take_screenshot = "true"
 quick_menu_show_undo_save_load_state = "true"
 quit_on_close_content = "0"
