add "A" systems to es_systems.cfg

--- a/emulationstation/.emulationstation/es_systems.cfg
+++ b/emulationstation/.emulationstation/es_systems.cfg
@@ -1,204 +1,253 @@
 
 <systemList>
+
+
     <system>
-    <name>nes</name>
-    <fullname>Nintendo Entertainment System</fullname>
-    <path>/media/sdcard0/Roms/FC/</path>
-    <extension>.nes .NES .zip</extension>
-    <command>/media/sdcard0/Emu/FC/launch.sh %ROM%</command>
-    <platform>nes</platform>
-    <theme>nes</theme>
+        <name>AMIGA</name>
+        <fullname>Commodore Amiga</fullname>
+        <path>/mnt/SDCARD/Roms/AMIGA/</path>
+        <extension>.zip .7z .adf .adz .dms .fdi .ipf .hdf .hdz .lha .slave .info .cue .ccd .nrg .mds .iso .chd .uae .m3u .rp9</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>amiga</platform>
+        <theme>amiga</theme>
     </system>
 
     <system>
-    <name>megadrive</name>
-    <fullname>Mega Drive</fullname>
-    <path>/media/sdcard0/Roms/MD/</path>
-    <extension>.zip .ZIP .mdx .md .smd .gen .bin .cue .iso .sms .bms .gg .sg .68k .sgd .chd .m3u</extension>
-    <command>/media/sdcard0/Emu/MD/launch.sh %ROM%</command>
-    <platform>megadrive</platform>
-    <theme>megadrive</theme>
+        <name>ARCADE</name>
+        <fullname>Arcade</fullname>
+        <path>/mnt/SDCARD/Roms/ARCADE/</path>
+        <extension>.zip</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>arcade</platform>
+        <theme>arcade</theme>
     </system>
 
     <system>
-    <name>sfc</name>
-    <fullname>Super Famicom</fullname>
-    <path>/media/sdcard0/Roms/SFC/</path>
-    <extension>.zip .ZIP .smc .sfc .swc .fig .bs .st</extension>
-    <command>/media/sdcard0/Emu/SFC/launch.sh %ROM%</command>
-    <platform>sfc</platform>
-    <theme>sfc</theme>
+        <name>ARDUBOY</name>
+        <fullname>Arduboy</fullname>
+        <path>/mnt/SDCARD/Roms/ARDUBOY/</path>
+        <extension>.hex</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>arduboy</platform>
+        <theme>arduboy</theme>
     </system>
 
     <system>
-    <name>gamegear</name>
-    <fullname>Game Gear</fullname>
-    <path>/media/sdcard0/Roms/GG/</path>
-    <extension>.zip .ZIP .gg .sg .68k .sgd .bin .BIN</extension>
-    <command>/media/sdcard0/Emu/GG/launch.sh %ROM%</command>
-    <platform>gamegear</platform>
-    <theme>gamegear</theme>
+        <name>ATARI</name>
+        <fullname>Atari 2600</fullname>
+        <path>/mnt/SDCARD/Roms/ATARI/</path>
+        <extension>.zip .ZIP .a26 .A26 .bin .BIN .7z .7Z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atari2600</platform>
+        <theme>atari2600</theme>
     </system>
 
     <system>
-    <name>mastersystem</name>
-    <fullname>Master System</fullname>
-    <path>/media/sdcard0/Roms/MS/</path>
-    <extension>.zip .ZIP .sms .bms .gg .sg .68k .sgd .bin .BIN</extension>
-    <command>/media/sdcard0/Emu/MS/launch.sh %ROM%</command>
-    <platform>mastersystem</platform>
-    <theme>mastersystem</theme>
-    </system>
-
-    <system>
-    <name>atari2600</name>
-    <fullname>Atari2600</fullname>
-    <path>/media/sdcard0/Roms/ATARI2600/</path>
-    <extension>.zip .ZIP .a26 .A26 .bin .BIN</extension>
-    <command>/media/sdcard0/Emu/ATARI2600/launch.sh %ROM%</command>
-    <platform>atari2600</platform>
-    <theme>atari2600</theme>
-    </system>
-
-    <system>
-    <name>atari7800</name>
-    <fullname>Atari7800</fullname>
-    <path>/media/sdcard0/Roms/atari7800/</path>
-    <extension>.zip .ZIP .a78 .A78 .bin .BIN</extension>
-    <command>/media/sdcard0/Emu/atari7800/launch.sh %ROM%</command>
-    <platform>atari7800</platform>
-    <theme>atari7800</theme>
-    </system>
-
-    <system>
-    <name>DC</name>
-    <fullname>Dreamcast</fullname>
-    <path>/media/sdcard0/Roms/DC/</path>
-    <extension>.chd .cdi .elf .bin .cue .gdi .lst .zip .dat .7z .m3u</extension>
-    <command>/media/sdcard0/Emu/DC/launch.sh %ROM%</command>
-    <platform>dreamcast</platform>
-    <theme>dreamcast</theme>
-    </system>
-
-    <system>
-    <name>N64</name>
-    <fullname>N64</fullname>
-    <path>/media/sdcard0/Roms/N64/</path>
-    <extension>.zip .ZIP .7z .n64 .c64 .z64</extension>
-    <command>/media/sdcard0/Emu/N64/launch.sh %ROM%</command>
-    <platform>n64</platform>
-    <theme>n64</theme>
-    </system>
-
-    <system>
-    <name>fba</name>
-    <fullname>FinalBurn Alpha</fullname>
-    <path>/media/sdcard0/Roms/ARCADE/</path>
-    <extension>.zip .ZIP</extension>
-    <command>/media/sdcard0/Emu/ARCADE/launch.sh %ROM%</command>
-    <platform>arcade</platform>
-    <theme>fba</theme>
-    </system>
-
-    <system>
-    <name>fbneo</name>
-    <fullname>FinalBurn Neo</fullname>
-    <path>/media/sdcard0/Roms/fbahack/</path>
-    <extension>.zip .ZIP</extension>
-    <command>/media/sdcard0/Emu/FBNEO/launch.sh %ROM%</command>
-    <platform>arcade</platform>
-    <theme>fba</theme>
-    </system>
-
-    <system>
-    <name>gba</name>
-    <fullname>GameBoy Advance</fullname>
-    <path>/media/sdcard0/Roms/GBA/</path>
-    <extension>.zip .ZIP .gba .GBA .agb .AGB .gbz .GBZ</extension>
-    <command>/media/sdcard0/Emu/GBA/launch.sh %ROM%</command>
-    <platform>gba</platform>
-    <theme>gba</theme>
-    </system>
-
-    <system>
-    <name>gbc</name>
-    <fullname>GameBoy Color</fullname>
-    <path>/media/sdcard0/Roms/GBC/</path>
-    <extension>.zip .ZIP .gbc .GBC</extension>
-    <command>/media/sdcard0/Emu/GBC/launch.sh %ROM%</command>
-    <platform>gbc</platform>
-    <theme>gbc</theme>
-    </system>
-
-    <system>
-    <name>gb</name>
-    <fullname>GameBoy</fullname>
-    <path>/media/sdcard0/Roms/GB/</path>
-    <extension>.zip .ZIP .gb</extension>
-    <command>/media/sdcard0/Emu/GB/launch.sh %ROM%</command>
-    <platform>gb</platform>
-    <theme>gb</theme>
-    </system>
-
-    <system>
-    <name>mame</name>
-    <fullname>MAME2003PLUS</fullname>
-    <path>/media/sdcard0/Roms/MAME2003PLUS/</path>
-    <extension>.zip .ZIP</extension>
-    <command>/media/sdcard0/Emu/MAME2003PLUS/launch.sh %ROM%</command>
-    <platform>mame</platform>
-    <theme>mame</theme>
+        <name>ATARIST</name>
+        <fullname>Atari ST</fullname>
+        <path>/mnt/SDCARD/Roms/ATARIST</path>
+        <extension>.st .msa .stx .dim .ipf .zip .7z</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atarist</platform>
+        <theme>atarist</theme>
     </system>
 
 
+
+
+
+
     <system>
-    <name>neogeo</name>
-    <fullname>NEOGEO</fullname>
-    <path>/media/sdcard0/Roms/NEOGEO/</path>
-    <extension>.zip .ZIP</extension>
-    <command>/media/sdcard0/Emu/NEOGEO/launch.sh  %ROM%</command>
-    <platform>neogeo</platform>
-    <theme>neogeo</theme>
+        <name>FC</name>
+        <fullname>Nintendo Entertainment System</fullname>
+        <path>/mnt/SDCARD/Roms/FC/</path>
+        <extension>.nes .NES .zip</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>nes</platform>
+        <theme>nes</theme>
     </system>
 
     <system>
-    <name>ngp</name>
-    <fullname>NGP</fullname>
-    <path>/media/sdcard0/Roms/NGP/</path>
-    <extension>.zip .ZIP .ngc .NGC .ngp .NGP</extension>
-    <command>/media/sdcard0/Emu/NGP/launch.sh %ROM%</command>
-    <platform>ngp</platform>
-    <theme>ngp</theme>
+        <name>MD</name>
+        <fullname>Mega Drive</fullname>
+        <path>/mnt/SDCARD/Roms/MD/</path>
+        <extension>.zip .ZIP .mdx .md .smd .gen .bin .cue .iso .sms .bms .gg .sg .68k .sgd .chd .m3u</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>megadrive</platform>
+        <theme>megadrive</theme>
     </system>
 
     <system>
-    <name>pce</name>
-    <fullname>PCEngine</fullname>
-    <path>/media/sdcard0/Roms/PCE/</path>
-    <extension>.zip .ZIP .pce .PCE .cue .CUE</extension>
-    <command>/media/sdcard0/Emu/PCE/launch.sh %ROM%</command>
-    <platform>pcengine</platform>
-    <theme>pcengine</theme>
+        <name>SFC</name>
+        <fullname>Super Nintendo Entertainment System</fullname>
+        <path>/mnt/SDCARD/Roms/SFC/</path>
+        <extension>.zip .ZIP .smc .sfc .swc .fig .bs .st</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>sfc</platform>
+        <theme>sfc</theme>
+    </system>
+
+    <system>
+        <name>gamegear</name>
+        <fullname>Game Gear</fullname>
+        <path>/mnt/SDCARD/Roms/GG/</path>
+        <extension>.zip .ZIP .gg .sg .68k .sgd .bin .BIN</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gamegear</platform>
+        <theme>gamegear</theme>
+    </system>
+
+    <system>
+        <name>mastersystem</name>
+        <fullname>Master System</fullname>
+        <path>/mnt/SDCARD/Roms/MS/</path>
+        <extension>.zip .ZIP .sms .bms .gg .sg .68k .sgd .bin .BIN</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>mastersystem</platform>
+        <theme>mastersystem</theme>
+    </system>
+
+
+
+    <system>
+        <name>atari7800</name>
+        <fullname>Atari7800</fullname>
+        <path>/mnt/SDCARD/Roms/atari7800/</path>
+        <extension>.zip .ZIP .a78 .A78 .bin .BIN</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>atari7800</platform>
+        <theme>atari7800</theme>
+    </system>
+
+    <system>
+        <name>DC</name>
+        <fullname>Dreamcast</fullname>
+        <path>/mnt/SDCARD/Roms/DC/</path>
+        <extension>.chd .cdi .elf .bin .cue .gdi .lst .zip .dat .7z .m3u</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>dreamcast</platform>
+        <theme>dreamcast</theme>
+    </system>
+
+    <system>
+        <name>N64</name>
+        <fullname>N64</fullname>
+        <path>/mnt/SDCARD/Roms/N64/</path>
+        <extension>.zip .ZIP .7z .n64 .c64 .z64</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>n64</platform>
+        <theme>n64</theme>
+    </system>
+
+    <system>
+        <name>fba</name>
+        <fullname>FinalBurn Alpha</fullname>
+        <path>/mnt/SDCARD/Roms/ARCADE/</path>
+        <extension>.zip .ZIP</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>arcade</platform>
+        <theme>fba</theme>
+    </system>
+
+    <system>
+        <name>fbneo</name>
+        <fullname>FinalBurn Neo</fullname>
+        <path>/mnt/SDCARD/Roms/fbahack/</path>
+        <extension>.zip .ZIP</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>arcade</platform>
+        <theme>fba</theme>
+    </system>
+
+    <system>
+        <name>gba</name>
+        <fullname>GameBoy Advance</fullname>
+        <path>/mnt/SDCARD/Roms/GBA/</path>
+        <extension>.zip .ZIP .gba .GBA .agb .AGB .gbz .GBZ</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gba</platform>
+        <theme>gba</theme>
+    </system>
+
+    <system>
+        <name>gbc</name>
+        <fullname>GameBoy Color</fullname>
+        <path>/mnt/SDCARD/Roms/GBC/</path>
+        <extension>.zip .ZIP .gbc .GBC</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gbc</platform>
+        <theme>gbc</theme>
+    </system>
+
+    <system>
+        <name>gb</name>
+        <fullname>GameBoy</fullname>
+        <path>/mnt/SDCARD/Roms/GB/</path>
+        <extension>.zip .ZIP .gb</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>gb</platform>
+        <theme>gb</theme>
+    </system>
+
+    <system>
+        <name>mame</name>
+        <fullname>MAME2003PLUS</fullname>
+        <path>/mnt/SDCARD/Roms/MAME2003PLUS/</path>
+        <extension>.zip .ZIP</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>mame</platform>
+        <theme>mame</theme>
     </system>
 
 
     <system>
-    <name>ppsspp</name>
-    <fullname>PPSSPP</fullname>
-    <path>/media/sdcard0/Roms/PSP/</path>
-    <command>/media/sdcard0/Emu/PPSSPP/PPSSPPSDL %ROM%</command>
-    <platform>psp</platform>
-    <theme>psp</theme>
+        <name>neogeo</name>
+        <fullname>NEOGEO</fullname>
+        <path>/mnt/SDCARD/Roms/NEOGEO/</path>
+        <extension>.zip .ZIP</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>neogeo</platform>
+        <theme>neogeo</theme>
     </system>
 
     <system>
-    <name>wsc</name>
-    <fullname>WonderSwan</fullname>
-    <path>/media/sdcard0/Roms/WSC/</path>
-    <extension>.zip .ZIP .wsc .WSC .ws .WS</extension>
-    <command>/media/sdcard0/Emu/WSC/launch.sh %ROM%</command>
-    <platform>wonderswan</platform>
-    <theme>wonderswan</theme>
+        <name>ngp</name>
+        <fullname>NGP</fullname>
+        <path>/mnt/SDCARD/Roms/NGP/</path>
+        <extension>.zip .ZIP .ngc .NGC .ngp .NGP</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>ngp</platform>
+        <theme>ngp</theme>
+    </system>
+
+    <system>
+        <name>pce</name>
+        <fullname>PCEngine</fullname>
+        <path>/mnt/SDCARD/Roms/PCE/</path>
+        <extension>.zip .ZIP .pce .PCE .cue .CUE</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>pcengine</platform>
+        <theme>pcengine</theme>
+    </system>
+
+
+    <system>
+        <name>ppsspp</name>
+        <fullname>PPSSPP</fullname>
+        <path>/mnt/SDCARD/Roms/PSP/</path>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>psp</platform>
+        <theme>psp</theme>
+    </system>
+
+    <system>
+        <name>wsc</name>
+        <fullname>WonderSwan</fullname>
+        <path>/mnt/SDCARD/Roms/WSC/</path>
+        <extension>.zip .ZIP .wsc .WSC .ws .WS</extension>
+        <command>/mnt/SDCARD/Emus/.emu_setup/standard_launch.sh %ROM%</command>
+        <platform>wonderswan</platform>
+        <theme>wonderswan</theme>
     </system>    
 
 </systemList>
